# eww

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  book.js  configuration.html  eww.html  eww.nix  flake.nix  index.html  magic-vars.html  print.html  searchindex.js  searchindex.json  troubleshooting.html
.github/workflows/: build.yml
crates/eww/: Cargo.toml  build.rs
crates/eww/src/: app.rs  client.rs  daemon_response.rs  display_backend.rs  error_handling_ctx.rs  ipc_server.rs  main.rs  opts.rs  paths.rs  script_var_handler.rs  server.rs  window_arguments.rs
crates/eww/src/config/: eww_config.rs  inbuilt.rs  mod.rs  script_var.rs  scss.rs  system_stats.rs
crates/eww/src/state/: one_to_n_elements_map.rs  scope_graph.rs  test.rs
crates/eww/src/widgets/: build_widget.rs  circular_progressbar.rs  graph.rs  systray.rs  transform.rs  widget_definitions.rs  window.rs
crates/eww_shared_util/: Cargo.toml
crates/eww_shared_util/src/: locale.rs  span.rs
crates/notifier_host/: Cargo.toml
crates/notifier_host/src/: lib.rs  watcher.rs
crates/notifier_host/src/proxy/: dbus_status_notifier_item.rs  dbus_status_notifier_watcher.rs  mod.rs
crates/simplexpr/: Cargo.toml
crates/simplexpr/src/: dynval.rs  eval.rs
crates/yuck/: Cargo.toml
crates/yuck/src/: error.rs  format_diagnostic.rs
crates/yuck/src/config/: attributes.rs  backend_window_options.rs  monitor.rs  script_var_definition.rs  toplevel.rs  validate.rs  window_definition.rs  window_geometry.rs
crates/yuck/src/config/snapshots/: eww_config__config__test__config.snap
crates/yuck/src/value/: coords.rs
docs/src/: configuration.md  eww.md  troubleshooting.md
nix/: module.nix  overlays.nix  package.nix  shell.nix
