[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]

simplexpr = { version = "0.1.0", path = "crates/simplexpr" }
eww_shared_util = { version = "0.1.0", path = "crates/eww_shared_util" }
yuck = { version = "0.1.0", path = "crates/yuck", default-features = false }
notifier_host = { version = "0.1.0", path = "crates/notifier_host" }

anyhow = "1.0.100"
bincode = { version = "2.0.1", features = ["serde"] }
cached = "0.56.0"
chrono = "0.4.42"
chrono-tz = "0.10.4"
clap = { version = "4.5.51", features = ["derive"] }
clap_complete = "4.5.60"
codespan-reporting = "0.13.1"
derive_more = { version = "2.0.1", features = [
    "as_ref",
    "debug",
    "display",
    "from",
    "from_str",
] }
extend = "1.2"
futures = "0.3.31"
grass = "0.13.4"
gtk = "0.18.2"
insta = "1.43.2"
itertools = "0.14.0"
jaq-core = "1.5.1"
jaq-parse = "1.0.3"
jaq-std = "1.6.0"
jaq-interpret = "1.5.0"
jaq-syn = "1.6.0"
lalrpop = { version = "0.22.2", features = ["unicode"] }
lalrpop-util = { version = "0.22.2", features = ["unicode"] }
libc = "0.2.177"
log = "0.4.28"
maplit = "1"
nix = "0.30.1"
notify = "8.2.0"
once_cell = "1.21.3"
pretty_assertions = "1.4.0"
pretty_env_logger = "0.5.0"
ref-cast = "1.0.25"
regex = "1.12.2"
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }
simple-signal = "1.1"
smart-default = "0.7.1"
static_assertions = "1.1.0"
strsim = "0.11"
strum = { version = "0.27.2", features = ["derive"] }
sysinfo = "0.37.2"
thiserror = "2.0.17"
tokio-util = "0.7.17"
tokio = { version = "1.48.0", features = ["full"] }
unescape = "0.1"
wait-timeout = "0.2.1"
zbus = { version = "4.4.0", default-features = false, features = ["tokio"] }

[profile.dev]
split-debuginfo = "unpacked"
